Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104785

[REGR:5->6] Performance regression in QLocale on macOS

XMLWordPrintable

    • macOS
    • 21
    • d3ede38ed (dev), 62c7b68ac (tqtc/lts-6.2), 59c686080 (dev), ecfb048b4 (6.5), 77bdb9dfb (6.5)
    • Foundation PM Prioritized, Foundation Sprint 76, Foundation Sprint 77, Foundation Sprint 78, Foundations Sprint 79

      On macOS with qt6 there is a performance regression in the method QLocale::toString(QDate).

      macOS qt5: 0.000762 msecs per iteration
      macOS qt6:  0.32 msecs per iteration

      Test code is (see also attached project):

      QLocale locale = QLocale::system();    
      QDate curDate = QDate::currentDate();    
      QBENCHMARK(locale.toString(curDate, "dd.MM.yyyy"));
      

        1. benchmark_results_macos_qt5.txt
          2 kB
          Lorenzo Sinigaglia
        2. benchmark_results_macos_qt6.txt
          2 kB
          Lorenzo Sinigaglia
        3. benchmark_results_win_qt5.txt
          2 kB
          Lorenzo Sinigaglia
        4. benchmark_results_win_qt6.txt
          2 kB
          Lorenzo Sinigaglia
        5. date_to_string_benchmark_project.zip
          2 kB
          Lorenzo Sinigaglia
        6. Kapture 2022-10-29 at 13.07.29.mp4
          92 kB
          Mitch Curtis
        7. Screen Shot 2022-10-29 at 12.58.00.png
          2.30 MB
          Mitch Curtis
        8. Screen Shot 2022-10-29 at 12.59.46.png
          824 kB
          Mitch Curtis
        For Gerrit Dashboard: QTBUG-104785
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            lsbts1291 Lorenzo Sinigaglia
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: